--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 DATABASE_URL="file:./dev.db"
-DATABASE_URL="file:./dev.db"
-JWT_SECRET="cok-gizli-guvenlik-anahtari-123456"
+PORT=3000
+JWT_SECRET="gizli_anahtarın_buraya"
