--- a/server/package.json
+++ b/server/package.json
@@ -3,19 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node --watch index.js",
+    "dev": "node index.js",
     "start": "node index.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.7.1",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
-    "axios": "^1.6.2"
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
-    "prisma": "^5.7.1"
+    
   }
 }
